# FullStackTemplate

./: README.md  justfile  openapi.json
backend/: .gitignore  justfile  pyproject.toml
backend/src/my_fullstack_template/: api.py
backend/src/my_fullstack_template/routes/: __init__.py  status.py
backend/tests/: test_palceholder.py  test_placeholder.py
cli/: .gitignore  README.md  justfile  pyproject.toml
cli/src/my_fullstack_template/: cli.py
cli/src/my_fullstack_template/di/: container.py  settings.py
cli/src/my_fullstack_template/helpers/: __init__.py
cli/src/my_fullstack_template/subcommands/: __init__.py  codegen.py  status.py
frontend/: .gitignore  README.md  angular.json  eslint.config.js  justfile  openapi-config.yaml  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html
frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/status/: status.component.html  status.component.ts
frontend/src/app/features/dashboard/: dashboard.component.ts
