[project]
name = "my_fullstack_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.136.1",
]
[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest >=9.0.3",
    "pytest-asyncio >=1.3.0",
    "pytest-cov >=7.1.0",
    "ruff>=0.15.15",
]
[project.scripts]
my_fullstack_template = "my_fullstack_template.api:main"
export_openapi = "my_fullstack_template.api:export_openapi"

[build-system]
requires = ["uv_build>=0.11.14"]
build-backend = "uv_build"
