[project]
name = "my_fullstack_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.49.0",
    "httpx>=0.28.1",
    "openapi-python-client>=0.28.4",
    "pydantic-settings>=2.14.1",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest >=9.0.3",
    "pytest-asyncio >=1.3.0",
    "pytest-cov >=7.1.0",
]
[project.scripts]
my_fullstack_template = "my_fullstack_template.cli:main"

[build-system]
requires = ["uv_build>=0.11.14"]
build-backend = "uv_build"
